tests/fail/commutative_on_index.stderr
error: operation `Index` cannot commute
 --> $DIR/commutative_on_index.rs:6:11
  |
6 | #[impl_op(commutative)]
  |           ^^^^^^^^^^^
